
JDO:     Fixed the way in which null fields are handled, so has/delete methods are called
         if available, default value is used otherwise, setNull/wasNull are used on the
         JDBC record.

Mapping: Date type no longer defaults to new date() when field is null, field is no
         longer set to default when null. (Reported by Lincoln Spiteri
         <Lincoln.Spiteri@mobisle.com>).


Version 0.8.5  May 12, 2000
---------------------------

JDO:     Remove enumerate collection type. Only get method is required to support
         java.util collections, get/set methods to support arrays. Extended the
         CollectionHandler interface with size() method to assist in validation.

JDO:     Revised the CacheEngine towards dependency support, adding FIFO list to
         determine order of object removal, simplifying the prepare stage. Objects
         will now be removed from the database in the same order they were removed
         by calling Database.remove().

JDO:     Fixes to outer query expressions:
         - JDBCQueryExpression fixed and tested with Access (Christopher
           Elkins <celkins@scardini.com>)
         - OracleQueryExpression fixed not tested with Oracle
           (Sebastien Sahuc <ssahuc@imediation.com>)

JDO:     Now using new OQL parser by default. Added support for is_defined/
         is_undefined (IS NULL), BETWEEN and DISTINCT. (Nissim
          <nissim@panix.com>)

JDO:     Added convertor between java.sql.Date and java.util.Date
         (reported by <Lincoln.Spiteri@mobisle.com>).

JDO:     Improved type convertion for key generators. MAX key generator now
         should work with PostgreSQL. (Oleg Nitz <on@ibis.odessa.ua>)

JDO:     Added support for stored procedures in OQLQuery. Now it is possible to
         create queries of the form "CALL sp_something($) AS myapp.Product",
         where sp_something is a stored procedure returning one or more